// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render draggable points when route contains more than 1 element 1`] = `
<ul
  className="some-draggable-list"
  data-rbd-droppable-context-id="0"
  data-rbd-droppable-id="draggable-list"
>
  <li
    aria-describedby="rbd-hidden-text-0-hidden-text-0"
    data-rbd-drag-handle-context-id="0"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="0"
    data-rbd-draggable-id="1"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={-1}
  >
    <div>
      <div>
        Item #1
      </div>
      <div>
        Dragger
      </div>
    </div>
  </li>
  <li
    aria-describedby="rbd-hidden-text-0-hidden-text-0"
    data-rbd-drag-handle-context-id="0"
    data-rbd-drag-handle-draggable-id="2"
    data-rbd-draggable-context-id="0"
    data-rbd-draggable-id="2"
    draggable={false}
    onDragStart={[Function]}
    onTransitionEnd={null}
    role="button"
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={-1}
  >
    <div>
      <div>
        Item #2
      </div>
      <div>
        Dragger
      </div>
    </div>
  </li>
</ul>
`;

exports[`should render empty container when list is empty 1`] = `
<ul
  className="some-draggable-list"
  data-rbd-droppable-context-id="2"
  data-rbd-droppable-id="draggable-list"
/>
`;

exports[`should render non-draggable point when route contains 1 element 1`] = `
<ul
  className="some-draggable-list"
  data-rbd-droppable-context-id="1"
  data-rbd-droppable-id="draggable-list"
>
  <li
    data-rbd-draggable-context-id="1"
    data-rbd-draggable-id="1"
    onTransitionEnd={null}
    style={
      Object {
        "transform": null,
        "transition": null,
      }
    }
    tabIndex={-1}
  >
    <div>
      <div>
        Item #1
      </div>
    </div>
  </li>
</ul>
`;
